Revision history for Padre-Plugin-LaTeX

{{$NEXT}}

0.07   2010.10.29
        Removed Test::NeedsDisplay dependency (AZAWAWI)

0.06   2010.10.27
        t/00-load.t is magically injected by [@PadrePlugin] via [LoadTests] (AZAWAWI)

0.05   2010.10.26
        Updated Arabic translation since it was not working (AZAWAWI)

0.04   2010.10.26
        Nothing... Simply a reupload of 0.03 (AZAWAWI)

0.03   2010.10.26
        Syntax checking still crashes; will improve later (ZENOG)
        Added Italian translation (SBLADIN)
        Switched to Dist::Zilla (AZAWAWI)
        Added Arabic translation (AZAWAWI)
        Compatibility with latest Padre (AZAWAWI)

0.02    2010-07-23
        Compatibility to newer Padre versions
        added preliminary i18n support (does not work correctly)
        new features: create+view PDF, run BibTeX

0.01    2010-05-11
        First version, released on an unsuspecting world.
        Only feature: toggle comments
