@@ -4,6 +4,7 @@ author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
 license          = Perl_5
 version          = 0.07
 copyright_holder = Zeno Gantner
+copyright_holder = Ahmad M. Zawawi
 
 [@PadrePlugin]
 
