@@ -17,7 +17,8 @@ sub padre_interfaces {
 }
 
 sub registered_documents {
-	'application/x-latex' => 'Padre::Document::LaTeX',;
+	'application/x-latex'  => 'Padre::Document::LaTeX',
+	'application/x-bibtex' => 'Padre::Document::BibTeX',;
 }
 
 sub menu_plugins_simple {
@@ -44,8 +45,12 @@ sub show_about {
 	# Generate the About dialog
 	my $about = Wx::AboutDialogInfo->new;
 	$about->SetName(Wx::gettext('LaTeX Plug-in'));
-	my $authors     = 'Zeno Gantner';
+	my $authors     = 'Zeno Gantner, Ahmad M. Zawawi';
 	my $description = Wx::gettext( <<'END' );
+LaTeX support for Padre
+
+For syntax highlighting of BibTeX files install the Kate plugin: Padre::Plugin::Kate
+
 Copyright 2010 %s
 This plug-in is free software; you can redistribute it and/or modify it under the same terms as Padre.
 END
@@ -72,7 +77,7 @@ sub create_pdf {
 		return;
 	}
 
-	# TODO autosave (or ask)
+	# TODO autosave or ask or use temporary file
 
 	chdir $tex_dir;
 	my $output_text = `$pdflatex $tex_file`;
